force-app/main/default/objects/FPSA_Resource_TimeLines__c/FPSA_Resource_TimeLines__c.object-meta.xml
<CustomObject>
    <label>Resource TimeLine</label>
    <nameField>
        <displayFormat>TL-{00000}</displayFormat>
        <label>Timecard Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource TimeLines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>