force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/Cost_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate_Amount__c</fullName>
    <description>Cost Rate Amount from Assigned Project.</description>
    <formula>FPSA_Assignment__r.FPSA_Cost_Rate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost Rate Amount from Assigned Project.</inlineHelpText>
    <label>Cost Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>