force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_ALL_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_ALL_Total_Hours__c</fullName>
    <label>All Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>