force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Approved__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will be on the timcard header, as the header goes for approval.</inlineHelpText>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>