force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Approver__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Based on the Project Approver Field</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_TimeLines</relationshipName>
    <type>Lookup</type>
</CustomField>