force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be on the timcard header, as the header goes for approval.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>FPSA_Project_Allocation__c</referenceTo>
    <relationshipLabel>Resource TimeLines</relationshipLabel>
    <relationshipName>Resource_TimeLines</relationshipName>
    <type>Lookup</type>
</CustomField>