force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Billable__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Defaulted from Assignment</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>