force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Billed__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>