force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_BillRate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_BillRate__c</fullName>
    <label>Bill Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>