force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Cost_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Cost_Rate_Amount__c</fullName>
    <description>RM - Created a formula field to get cost rate from project allocation. This can be deleted.</description>
    <label>PD Cost Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>