force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>FPSA_Invoice_Line__c</referenceTo>
    <relationshipLabel>Resource TimeLines</relationshipLabel>
    <relationshipName>Resource_TimeLines</relationshipName>
    <type>Lookup</type>
</CustomField>