force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>