force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Lock_RT_To_Update_RA__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Lock_RT_To_Update_RA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To restrict process again if ResourceTimeline is already processed through batch job and updated data on Resource Availability.</description>
    <label>Lock RT To Update RA?</label>
    <type>Checkbox</type>
</CustomField>