force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Milestone__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Resource TimeLines</relationshipLabel>
    <relationshipName>Resource_TimeLines</relationshipName>
    <type>Lookup</type>
</CustomField>