force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Monday_Notes__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Monday_Notes__c</fullName>
    <label>Monday Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>