force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_No_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_No_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Hours</label>
    <type>Checkbox</type>
</CustomField>