force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Original_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Original_Planned_Hours__c</fullName>
    <label>Original Planned Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>