force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Planned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Planned_Revenue__c</fullName>
    <description>Planned Revenue for resource</description>
    <formula>FPSA_BillRate__c * FPSA_Project_Planned_hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned Revenue</inlineHelpText>
    <label>Planned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>