force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support - Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>