force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Project_Planned_hrs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Planned_hrs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the planned efforts of the resource.</inlineHelpText>
    <label>Project Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>