force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Resource__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reparenting is allowed because we set the Master object through code otherwise code throws error &quot;Field is not writable&quot;</description>
    <label>Resource</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Resource TimeLines</relationshipLabel>
    <relationshipName>Resource_TimeLines</relationshipName>
    <type>Lookup</type>
</CustomField>