force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Resource_allocation_week__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_allocation_week__c</fullName>
    <externalId>true</externalId>
    <label>Project allocation unique num</label>
    <length>100</length>
    <type>Text</type>
</CustomField>