force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Resource_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_Cost_Rate__c</fullName>
    <formula>FPSA_Resource__r.FPSA_Default_Cost_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Resource Cost Rate</inlineHelpText>
    <label>Resource Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>