force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Resource_CostRate__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_CostRate__c</fullName>
    <description>This calculates the cost rate from Resource record into hours spent on project</description>
    <formula>FPSA_Resource__r.FPSA_Cost_Rate__c *  FPSA_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the cost rate from Resource record into hours spent on project</inlineHelpText>
    <label>FPSA Resource CostRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>