force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Resource_Email__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Resource_Email__c</fullName>
    <inlineHelpText>This email address receives the timesheet approval notifications</inlineHelpText>
    <label>Resource Email</label>
    <type>Email</type>
</CustomField>