force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Role__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Engagement Manager</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Functional Lead</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>QA Lead</fullName>
            </value>
            <value>
                <fullName>Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Solutions Architect</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Training Manager</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>On-Boarding</fullName>
            </value>
            <value>
                <fullName>Visualization Architect</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>