force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Saturday_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Saturday_Hours__c</fullName>
    <label>Saturday Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>