force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Sunday_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Sunday_Hours__c</fullName>
    <label>Sunday Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>