force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Thursday_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Thursday_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Thursday Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>