force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_Billable_Amount__c</fullName>
    <formula>FPSA_BillRate__c *  FPSA_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>