force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_Cost__c</fullName>
    <description>Project assignment cost rate amount multiplies to Total Hours.</description>
    <formula>Cost_Rate_Amount__c *  FPSA_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project assignment cost rate amount multiplies to Total Hours.</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>