force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Total_Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_Days_Worked__c</fullName>
    <formula>IF  ( FPSA_Sunday_Hours__c   &gt; 0 , 1 , 0 ) + 
IF  ( FPSA_Monday_Hours__c   &gt; 0 , 1 , 0 ) + 
IF  ( FPSA_Tuesday_Hours__c  &gt; 0 , 1 , 0 ) + 
IF  ( FPSA_Wednesday_Hours__c  &gt; 0 , 1 , 0 ) + 
IF  ( FPSA_Thursday_Hours__c &gt; 0  , 1 , 0 ) + 
IF  ( FPSA_Friday_Hours__c &gt; 0 , 1 , 0 ) +  
IF  ( FPSA_Saturday_Hours__c &gt; 0 , 1 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>