force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Total_Hours__c</fullName>
    <formula>FPSA_Sunday_Hours__c + FPSA_Tuesday_Hours__c +  FPSA_Monday_Hours__c  +  FPSA_Wednesday_Hours__c + FPSA_Thursday_Hours__c + FPSA_Saturday_Hours__c + FPSA_Friday_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>