force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Week_End_Date__c</fullName>
    <formula>FPSA_Week_Start_Date__c + 6</formula>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>