force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FPSA_Weekly_Notes__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Weekly_Notes__c</fullName>
    <label>Weekly Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>