force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/FSPA_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>FSPA_Start_Month__c</fullName>
    <formula>TEXT( MONTH( FPSA_Week_Start_Date__c )) +
&apos;/&apos; +
RIGHT( TEXT( YEAR( FPSA_Week_Start_Date__c )), 2)</formula>
    <label>Start Month</label>
    <type>Text</type>
</CustomField>