force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <description>Specifies if the assigned project is Billable or not.</description>
    <formula>FPSA_Assignment__r.FPSA_Project__r.FPSA_Is_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies if the assigned project is Billable or not.</inlineHelpText>
    <label>Billable?</label>
    <type>Checkbox</type>
</CustomField>