force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/IsPlannedAndTotalHrsDifferent__c.field-meta.xml
<CustomField>
    <fullName>IsPlannedAndTotalHrsDifferent__c</fullName>
    <formula>FPSA_Project_Planned_hrs__c != FPSA_ALL_Total_Hours__c ||
FPSA_Project_Planned_hrs__c != FPSA_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPlannedAndTotalHrsDifferent</label>
    <type>Checkbox</type>
</CustomField>