force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/Total_Actual_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Billable_Amount__c</fullName>
    <formula>FPSA_BillRate__c  *  FPSA_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>