force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/Total_Planned_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Billable_Amount__c</fullName>
    <formula>FPSA_BillRate__c  *  FPSA_Project_Planned_hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Planned Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>