force-app/main/default/objects/FPSA_Resource_TimeLines__c/fields/Total_Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Cost__c</fullName>
    <description>Project assignment cost rate amount multiplies to Project Planned Hours.</description>
    <formula>Cost_Rate_Amount__c * FPSA_Project_Planned_hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project assignment cost rate amount multiplies to Project Planned Hours.</inlineHelpText>
    <label>Total Planned Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>